install-usb-gui (0.0.14) UNRELEASED; urgency=low

  * NOT RELEASED YET

 -- Stefan Lippers-Hollmann <s.l-h@gmx.de>  Thu, 25 Oct 2007 18:01:54 +0200

install-usb-gui (0.0.13) unstable; urgency=low

  [ Joaquim Boura ]
  * language file pt

  [ Kel Modderman ]
  * Update debian menu section as per new subpolicy.

 -- Kel Modderman <kel@otaku42.de>  Thu, 25 Oct 2007 22:12:05 +1000

install-usb-gui (0.0.12) unstable; urgency=low

  * language files added
  * de.po updated
  * new po files fixed

 -- Horst Tritremmel <hjt@sidux.com>  Tue, 16 Oct 2007 13:43:08 +0200

install-usb-gui (0.0.11) unstable; urgency=low

  [ Horst Tritremmel ]
  * cheatcodes handling now with entry label
  * do not depend on gawk

  [ Kel Modderman ]
  * Replace logic for handling en_* languages correctly, this time in shell
    and not gawk.
  * Change udevtrigger coldplug subsystem-match to block from usb.
  * Make "nointro" a default cheatcode.

 -- Kel Modderman <kel@otaku42.de>  Tue, 16 Oct 2007 19:27:22 +1000

install-usb-gui (0.0.10) unstable; urgency=low

  * Use gawk to fetch list of languages via locale -a, depend on gawk.

 -- Kel Modderman <kel@otaku42.de>  Mon, 15 Oct 2007 15:23:13 +1000

install-usb-gui (0.0.9) unstable; urgency=low

  * Fix a couple of exit values that didn't use return values of commands.

 -- Kel Modderman <kel@otaku42.de>  Mon, 15 Oct 2007 08:36:29 +1000

install-usb-gui (0.0.8) unstable; urgency=low

  [ Horst Tritremmel ]
  * languge selection added/frontend
  * toram option added/frontend

  [ Kel Modderman ]
  * Catch exit value and put it into /tmp/.install_fromiso_in_USB for the gui
    to use.
  * --cheatcode option is impossible, it cannot accept a variable amount of
    arguments. Use -- ${cheatcodes} instead!

 -- Kel Modderman <kel@otaku42.de>  Mon, 15 Oct 2007 08:24:28 +1000

install-usb-gui (0.0.7) unstable; urgency=low

  * Revert 11410, adjust new manpage to be in line with work done pre-r11410.