@@ -1,8 +1,12 @@
 install-usb-gui (0.0.14) UNRELEASED; urgency=low
 
+  [ Stefan Lippers-Hollmann ]
   * NOT RELEASED YET
 
- -- Stefan Lippers-Hollmann <s.l-h@gmx.de>  Thu, 25 Oct 2007 18:01:54 +0200
+  [ Horst Tritremmel ]
+  * add isofile chooser if cheatcode toram is given
+
+ -- Horst Tritremmel <hjt@sidux.com>  Wed, 31 Oct 2007 08:12:53 +0100
 
 install-usb-gui (0.0.13) unstable; urgency=low
 
